--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
 }
+
+div.container {
+    margin: 20 0 30 0;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+}
